Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-9337

Hook manager implementation is missing mutex acquisition in several places.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.10.0
    • modules
    • None

    Description

      The hook manager uses a mutex to protect availableHooks from writing during read (probably this should be a read/write mutex).

      However, this mutex is not acquired in many of the reads. For example:

      (mutex acquired)
      https://github.com/apache/mesos/blob/1.7.0/src/hook/manager.cpp#L108-L138

      (mutex not acquired!)
      https://github.com/apache/mesos/blob/1.7.0/src/hook/manager.cpp#L141-L150

      Also, the mutex and map are non-POD statics, which are banned:
      https://github.com/apache/mesos/blob/1.9.0/src/hook/manager.cpp#L50-L51

      Attachments

        Activity

          People

            dzhu Dong Zhu
            bmahler Benjamin Mahler
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: