Fixed locking and static PODs in Hook manager.

This patch aims to fix issue MESOS-9337:
  1. add missing mutex acquisition for the potential race
  2. change the global mutex and map variable to POD type

Signed-off-by: Dong Zhu <dzhu@d2iq.com>

This closes #353